--- a/rsshub/templates/main/feeds.html
+++ b/rsshub/templates/main/feeds.html
@@ -67,6 +67,19 @@
 <br>
 <!--item info end-->
 
+<!--item info start-->
+<div class="card text-left">
+    <div class="card-body">
+        <h4 class="card-title">福建网络广播电视台</h4>
+        <h6 class="text-muted">点播<a href="https://github.com/flyingicedragon" target="_blank" class="badge badge-secondary">by flyingicedragon</a></h6>
+        <p class="card-text">举例：<a href="https://pyrsshub.vercel.app/baidu/suggest/weishenme" target="_blank">https://pyrsshub.vercel.app/fjtv/dianbo/folder6_folder60_folder63_folder128</a></p>
+        <p class="card-text">路由：<code>/fjtv/dianbo/:id</code></p>
+        <p class="card-text">参数：id，栏目路径</p>
+        <p class="card-text">可以通过 <a href="https://vod.fjtv.net/">https://vod.fjtv.net/</a> 查看栏目。栏目链接中的一系列“folder”开头的路径既是栏目路径。栏目路径中的“/”需要转化成“_”方便识别。</p>
+    </div>
+</div>
+<br>
+<!--item info end-->
 
 <!--item info start-->
 <div class="card text-left">
